# starling

./: .gitignore  LICENSE  README.md  comms.md  pyproject.toml
benchmarks/: bench_encoder.py  bench_long_audio_batched.py  bench_long_audio_comparable.py  bench_long_audio_sweep.py  bench_multistep_llm.py  bench_rtf.py  bench_sweep.py
benchmarks/parakeet/: .gitkeep  bench_autotune.py  bench_batched_chunked.py  bench_chunked.py  bench_chunked_opt.py  bench_decode.py  bench_encoder_opt.py  bench_mel.py  bench_multistep.py  bench_pipeline.py  bench_robust.py
kernels/parakeet/: .gitkeep
scripts/: bench_autotune.py  bench_batched.py  bench_clean.py  bench_flags.py  bench_long.py  bench_memory.py  bench_pipeline.py  bench_quant.py  bench_speculative.py  diag_acceptance.py  diag_lcs.py  probe_ctc_draft.py  probe_quant_correctness.py  probe_speculative.py  setup_env.sh  test_server.py  verify_env.py
src/megapar/: __init__.py  baseline.py  batched.py  bench.py  config.py  config_dump.py  encoder_mega.py  flags.py  golden.py  llm_kernels.py  llm_mega.py  loader.py  long_audio.py  multistep.py  pipeline.py  quant.py  speculative.py  triton_kernels.py
src/megapar/parakeet/: ALGORITHM.md  MEL_PIPELINE.md  __init__.py  autotune.py  chunking.py  decode_mega.py  encoder_graph.py  gpu_lock.py  pipeline.py
src/starling/: __init__.py  audio.py  batched.py  bench.py  config.py  encoder_mega.py  flags.py  golden.py  llm_kernels.py  llm_mega.py  loader.py  long_audio.py  multistep.py  pipeline.py  quant.py
src/starling/granite/: __init__.py  audio.py  batched.py  bench.py  encoder_mega.py  golden.py  llm_mega.py  loader.py  long_audio.py  multistep.py  pipeline.py  server.py  speculative.py
src/starling/parakeet/: MEL_PIPELINE.md  __init__.py  autotune.py  chunking.py  decode_eager.py  decode_mega.py  gpu_lock.py  mel_gpu.py  pipeline.py
tests/: conftest.py  test_autotune.py  test_batched.py  test_chunking.py  test_decode_mega.py  test_encoder_mega.py  test_flags.py  test_llm_mega.py  test_mel_gpu.py  test_multistep.py  test_parakeet_pipeline.py  test_pipeline.py  test_quant.py  test_smoke.py  test_speculative.py
tests/fixtures/: get_real_corpus.py  make_fixtures.py
tests/fixtures/real_corpus/: reference.json
