[project]
name = "megapar"
version = "0.1.0"
description = "Megakernel for granite-speech-4.1-2b, optimized for RTX 5090 (Blackwell, sm_120)"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.11.0",
    "triton==3.6.0",
    "torchaudio==2.11.0",
    "transformers>=5.8,<6",
    "accelerate>=1.0",
    "soundfile",
    "librosa",
    "huggingface-hub",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/megapar"]

[tool.uv]
# Pull the CUDA 13.0 wheels from the PyTorch index; everything else from PyPI.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
triton = { index = "pytorch-cu130" }
